test_suite/tests/ui/with-variant/skip_ser_tuple_field_if.stderr
error: variant `Tuple` cannot have both #[serde(serialize_with)] and a field #0 marked with #[serde(skip_serializing_if)]
 --> tests/ui/with-variant/skip_ser_tuple_field_if.rs:5:5
  |
5 | /     #[serde(serialize_with = "serialize_some_other_variant")]
6 | |     Tuple(#[serde(skip_serializing_if = "always")] String, u8),
  | |______________________________________________________________^
